fix for phone mode (nav bar could be hidden under phone browser UI)

--- a/root/styles/root-tight.css
+++ b/root/styles/root-tight.css
@@ -1,3 +1,7 @@
+body {
+    height: calc(100vh - 6rem);
+}
+
 main {
     height       : calc(100vh - 7rem);
     width        : calc(100vw - 2rem);
